--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "usehooks-ts": "^2.9.1",
+    "valibot": "^0.17.1",
     "validator": "^13.11.0",
     "xlsx": "^0.18.5",
     "zustand": "^4.4.1",
